# practica-final-ra-mobil

./: CMakeLists.txt  README.md  package.xml  planner_5d_plugin.xml
docs/: AUDIT.md
include/ctf_navigation/: planner_5d.h
include/ctf_navigation/common/: geometry.hpp  markers.hpp  move_base_client.hpp  slam_wait.hpp  tf_helper.hpp
include/ctf_navigation/game/: exploration.hpp  map_utils.hpp  robot_agent.hpp  types.hpp
include/ctf_navigation/vision/: aruco_flag_detector.hpp  laser_utils.hpp  red_flag_detector.hpp
launch/: ctf_chase_test_slam.launch  ctf_chase_test_static.launch  ctf_demo.launch  ctf_game.launch  gmapping.launch  map_merge.launch  map_merge_tf.launch  navigation.launch  real_multi_robot_ctf.launch  real_robot_flag_vision.launch  real_robot_tf.launch  shared_slam.launch  simulation.launch  slam_demo.launch  slam_multi_robot_ctf.launch  slam_multi_robot_explore_lite.launch  slam_navigation.launch  slam_single_robot.launch  slam_single_robot_explore_lite.launch  slam_world_tf.launch  teleop_keyboard.launch  test_vision.launch
launch/include/: flag_detector.launch  flag_detectors.launch  spawn_robot_gazebo.launch
m-explore/map_merge/include/combine_grids/: merging_pipeline.h
maps/: ctf_map.pgm  ctf_map.yaml
models/: ctf_flag.urdf
params/: costmap_common.yaml  costmap_common_single.yaml  costmap_common_slam.yaml  costmap_global.yaml  costmap_global_single.yaml  costmap_global_slam.yaml  costmap_local.yaml  costmap_local_single.yaml  costmap_local_slam.yaml  explore_lite_multi.yaml  explore_lite_single.yaml  gmapping.yaml  gmapping_robot1.yaml  gmapping_robot2.yaml  gmapping_single.yaml  move_base.yaml  move_base_slam.yaml  planner_global.yaml  planner_global_slam_nav.yaml  planner_local_5d.yaml  planner_local_5d_slam.yaml  planner_local_dwa.yaml  planner_local_dwa_single.yaml  planner_local_dwa_slam.yaml  pursuer_spawn_points.yaml  vision.yaml  vision_real.yaml
rviz/: ctf_game.rviz  flag_detection.rviz  slam_multi_robot_ctf.rviz
scripts/: clock_drift_check.py  ctf_scripts.py  frontier_exploration_mixin.py  frontier_map_utils.py  generate_ctf_map.py  generate_worlds.py  laser_obstacle_filter.py  launch_config_echo.py  map_merge_debug.py  odom_tf_broadcaster.py  pick_pursuer_spawn.py  random_free_spawn.py  robot_cloud_utils.py  robot_coordinator.py  robot_obstacle_publisher.py  shared_map_merger.py  slam_frontier_explorer.py  slam_frontier_explorer_ctf.py  slam_frontier_explorer_single.py  teleop_keyboard.py  tf_map_merge.py  validate_pursuer_spawns.py
src/: cmd_vel_safety_filter.cpp  ctf_demo_node.cpp  planner_5d.cpp  teleop_keyboard.cpp
src/game/: exploration.cpp  map_utils.cpp  robot_agent.cpp
src/nodes/: ctf_coordinator_node.cpp  ctf_demo_node.cpp  flag_detector_node.cpp  robot_obstacle_publisher_node.cpp
src/vision/: aruco_flag_detector.cpp  red_flag_detector.cpp
worlds/: ctf_world.world  hallway_obstacles_world.world  hallway_world.world  nine_rooms_world.world
